--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^7.17.1",
     "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
